--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 	},
 	"dependencies": {
 		"react": "16.0.0",
-		"react-native": "0.50.3"
+		"react-native": "0.50.3",
+		"react-native-chart": "robcalcroft/react-native-chart"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
